<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FrameTest</string>
    <string name="title_name">我的</string>
    <string name="myfollow">我的关注</string>
    <string name="broadcastlive">直播</string>
    <string name="home">主页</string>
    <string name="mine">我的</string>
    <string name="toolname">username</string>
    <string name="toolsign">谁丑谁知道</string>
    <string name="follow">关注</string>
    <string name="fens">粉丝</string>
    <string name="mymoney">我的收益</string>
    <string name="toolmoney">¥500</string>
    <string name="mylevel">我的等级</string>
    <string name="toollevel">钻石</string>
    <string name="mydiamonds">我的钻石币</string>
    <string name="tooldiamonds">500个</string>
    <string name="mygift">我的礼物</string>
    <string name="toolgift">500个</string>
    <string name="invitefriends">邀请好友</string>
    <string name="toolinvite">邀请有奖哦~</string>
    <string name="qrcode">推广码</string>
    <string name="toolqrcode">ID:zz1234</string>
    <string name="setting">设置</string>
    <string name="toolbtnfollow">关注</string>
    <string name="toolfens">12345</string>
    <string name="toolfollows">12345</string>
</resources>
