<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/iv_account_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            tools:background="@drawable/icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/iv_account_icon"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_account_name"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/large_text_size"
                    tools:text="@string/toolname"/>

                <ImageView
                    android:id="@+id/iv_account_sex"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:background="@drawable/tab_male"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_account_sign"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                tools:text="@string/toolsign"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_account_follow"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            tools:text="@string/toolbtnfollow"
            tools:background="@drawable/btn_selector_follow"/>

    </RelativeLayout>

    <include layout="@layout/whiteline"/>

</LinearLayout>